# hsptest

./: .gitattributes  .gitignore  LICENSE  LICENSE.md  README.md  VERSION  annotation.hsp  append_data.hsp  argparse.hsp  compile.hsp  console.hsp  coverage.hsp  hsptest.hsp  install.bat  logfile.hsp  make_testcall_script.hsp  parse_result.hsp  process.hsp  readme.txt  run_hsptest.bat  script_tool.hsp  util.hsp  version.hsp
.github/: release_note.yml
.github/workflows/: release.yml  test.yml
common/: assertion.as  exception_code.as  hsptest_assertion.as  hsptest_common.as  result_format.as  test.as
hsptest_test/: test_argparse.hsp  test_copy_with_edit.hsp  test_deep_include.hsp  test_entry_module.hsp  test_module.hsp  test_too_long_output.hsp
hsptest_test/data/: appended_script  test_example.hsp
hsptest_test/include/: module3.as  module4.as
hsptest_test/include/a/: module.as  module1.as  module2.as
include/: assertion.as
plugin/: CMakeLists.txt
plugin/hspsdk/: hsp3debug.h  hsp3plugin.h  hsp3struct.h  hspwnd.h
plugin/src/: main.cpp
test/: ext.as  test_example.hsp
